[gd_scene load_steps=5 format=3 uid="uid://dfmd561t2igj3"]

[ext_resource type="Texture2D" uid="uid://6ehs608idonr" path="res://assets/introscreen.png" id="1_cjjnm"]
[ext_resource type="Texture2D" uid="uid://bovonewiim0l2" path="res://assets/button.png" id="2_pchhg"]
[ext_resource type="Script" path="res://scenes/PlayButton.gd" id="3_kwit7"]
[ext_resource type="AudioStream" uid="uid://cgx25m4ras570" path="res://assets/resonant-victory-glbml-22044.mp3" id="4_auv3k"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Introscreen" type="Sprite2D" parent="."]
position = Vector2(579, 323)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_cjjnm")

[node name="PlayButton" type="Button" parent="."]
offset_left = 690.0
offset_top = 347.0
offset_right = 1128.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "Play"
icon = ExtResource("2_pchhg")
icon_alignment = 1
script = ExtResource("3_kwit7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_auv3k")
volume_db = -20.0
autoplay = true

[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
